feat #1: Add signIn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%# <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %> 
-    <%# <%= javascript_importmap_tags %> 
+    <%# <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%# <%= javascript_importmap_tags %>
   </head>
-
   <body>
+      <b style="font-size: 40px"><%= link_to "Home", root_path %></b>
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
