--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,5 @@
-<h1>Users</h1>
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= "name: #{user.first_name}" %>
-    </li>
-  <% end %>
-</ul>
+<p>
+    Logged in as <strong><%= current_user.email %></strong>.</br>
+    <%= link_to 'Edit profile', edit_user_registration_path %> |
+    <%= link_to "Logout", destroy_user_session_path, method: :delete  %>
+</p>
