--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,27 +9,7 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">DevPath App</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
-          <%if user_signed_in?%>
-            <li class="nav-item active">
-              <%= link_to 'Edit profile', current_user.admin ? admin_users_path : edit_user_registration_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item active">
-              <%= link_to "Logout", destroy_user_session_path, class: "nav-link", method: :delete  %>
-            </li>
-          <%end%>
-        </ul>
-      </div>
-    </nav>
+    <%= render 'partials/nav_bar'%>
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
