--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,6 +25,13 @@
           <th scope="row"><%= user.id %></th>
           <td><%= user.first_name  %></td>
           <td><%= user.last_name  %></td>
+          <td>
+            <% if current_user.followed_by?(user) %>
+              <h5><%= button_to "Unfollow", unfollow_user_path(user), method: :post %></h5>
+            <% else %>
+              <h5><%= button_to "Follow", follow_user_path(user), method: :post  %></h5>
+            <% end%>
+          </td>
         </tr>
       <% end %>
     </tbody>
