--- a/app/views/partials/_nav_bar.erb
+++ b/app/views/partials/_nav_bar.erb
@@ -10,7 +10,7 @@
           <%= link_to 'Edit profile', edit_user_registration_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to 'Followed', followed_users_path, class: "nav-link" %>
+          <%= link_to 'Followed', users_followed_path, class: "nav-link" %>
         </li>
         <%if current_user.admin%>
           <li class="nav-item active">
