--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
           <td><%= user.first_name  %></td>
           <td><%= user.last_name  %></td>
           <td>
-            <% if current_user.followed_by?(user) %>
+            <% if user.followed_by?(current_user) %>
               <h5><%= button_to "Unfollow", user_follow_path(user), method: :delete %></h5>
             <% else %>
               <h5><%= button_to "Follow", user_follow_path(user) %></h5>
