--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,13 @@
     <%= f.submit "Update" %>
   </div>
 <% end %>
+
+<h3>API Key</h3>
+<%= form_with model: current_user, url: user_api_keys_path do |f| %>
+  <%= f.text_field :api_key, disabled: true %>
+  <%= f.submit "Generate New Key" %>
+<% end %>
+
 <h3>Cancel my account</h3>
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 <%= link_to "Back", :back %>
