feat #17: Add user feed export

--- a/app/views/partials/_nav_bar.erb
+++ b/app/views/partials/_nav_bar.erb
@@ -13,6 +13,9 @@
           <%= link_to 'Feed', feeds_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
+          <%= link_to 'Feed Exports', user_feed_exports_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
           <%= link_to 'Followed', followed_users_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
