--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>Edit <%=@user.first_name%></h2>
-<%= form_for(@user, url: "/admin/users/#{@user.id}", html: { method: :put }) do |f| %>
+<%= form_for(@user, url: admin_users_path(@user), html: { method: :put }) do |f| %>
   <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
